--- a/server/index.html
+++ b/server/index.html
@@ -62,6 +62,11 @@
 						dir: function(e) {
 							$('.navbutton').removeClass('ui-alt-icon');
 							$('#dir' + e.data).addClass('ui-alt-icon');
+						},
+						power: function (e) {
+							$('.navbutton').removeClass('ui-alt-icon');
+							$('#dir' + e.data['dir']).addClass('ui-alt-icon');
+							
 						}
 				}
 		});
